--- a/static/msg_list_template.html
+++ b/static/msg_list_template.html
@@ -17,7 +17,7 @@
                 <div class="msg__container{%if msg['is_mine'] %} msg__mineMsg{% endif %}" id="{{ msg['id'] }}">
                     <div class="msg__author">{{ msg['author'] }}</div>
                     <div class="msg__timestamp">{{ msg['time_stamp'].split(' ')[1] }}</div>
-                    <div class="msg__mainText">{{ msg['msg_text'] }}</div>
+                    <div class="msg__mainText">{{ msg_render(msg['msg_text']) }}</div>
                 </div>
             {%  endfor %}
         </div>
